# simbad-resolver

./: .gitignore  .mcp.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  HANDOVER.md  README.md  RELEASING.md  apm.lock.yaml  apm.yml  clippy.toml  justfile  release-please-config.json
.agents/skills/dep-audit/scripts/: audit.sh
.agents/skills/handover/scripts/: new-handover.py
.agents/skills/orchestrate/scripts/: _test_ledger.py  _test_msg_lint.py  graph.py
.agents/skills/resume-session/scripts/: list-sessions.py  read-session.py  test_read_session.py
.agents/skills/secrets-scan/: SKILL.md
.agents/skills/secrets-scan/scripts/: scan.sh
.agents/skills/write-agentic/scripts/: test_lint.py
.claude/: apm-hooks.json
.claude/skills/dep-audit/: SKILL.md
.claude/skills/handover/scripts/: test_new_handover.py
.claude/skills/orchestrate/scripts/: _test_consistency_check.py  _test_graph.py  consistency-check.py  discover-agents.py  ledger.py  msg-lint.py
.claude/skills/resume-session/scripts/: test_list_sessions.py
.claude/skills/write-agentic/scripts/: lint.py
.codex/: config.toml  hooks.json
.codex/hooks/secrets-scan/scripts/: secrets-precommit-guard.sh
.github/workflows/: ci.yml  live-simbad.yml  release-please.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
crates/simbad-resolver/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-cache/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-cache-memory/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-cache-memory/src/: cache.rs  lib.rs  queue.rs
crates/simbad-resolver-cache-sqlite/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-cache-sqlite/migrations/: 0001_init.sql
crates/simbad-resolver-cache-sqlite/src/: cache.rs  lib.rs  queue.rs  store.rs
crates/simbad-resolver-cache-sqlite/tests/: cache.rs  queue.rs  store.rs
crates/simbad-resolver-cache/src/: lib.rs
crates/simbad-resolver-caldwell/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-caldwell/src/: caldwell.rs  lib.rs
crates/simbad-resolver-core/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-core/src/: config.rs  error.rs  identity.rs  lib.rs  normalize.rs  resolver.rs  types.rs  wire.rs
crates/simbad-resolver-sesame/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-sesame/src/: config.rs  lib.rs  parse.rs  resolver.rs
crates/simbad-resolver-sesame/tests/: live.rs  offline.rs
crates/simbad-resolver-tap/: CHANGELOG.md  Cargo.toml
crates/simbad-resolver-tap/src/: lib.rs
crates/simbad-resolver-tap/tests/: live.rs  offline.rs
crates/simbad-resolver/src/: batch.rs  config.rs  error.rs  lib.rs  orchestrate.rs
crates/simbad-resolver/tests/: integration.rs
docs/: guide.md
docs/adr/: 0001-stack-and-architecture.md  0002-single-crate.md
examples/: resolve_offline.rs
signatures/: cla.json
specs/001-simbad-target-resolution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-simbad-target-resolution/checklists/: requirements.md
specs/001-simbad-target-resolution/contracts/: cache.md  facade.md  queue.md  resolver.md
specs/tiny/: skymath-0.6.0.md
src/: batch.rs  caldwell.rs  config.rs  error.rs  identity.rs  lib.rs  normalize.rs  orchestrate.rs  resolver.rs  tap.rs  types.rs  wire.rs
src/cache/: mod.rs  redb.rs
src/sesame/: mod.rs  parse.rs
tests/: cache.rs  facade.rs  live.rs  live_simbad.rs  offline_sesame.rs  offline_tap.rs  queue.rs  skymath.rs  store.rs
