# simbad-resolver — Cargo workspace root.
#
# A generic, embeddable SIMBAD astronomical target resolver for Rust. Granular
# `simbad-resolver-*` crates (see docs/adr/0001-stack-and-architecture.md); the
# main installable facade is `simbad-resolver`.
[workspace]
resolver = "2"
members = [
    "crates/simbad-resolver-core",
    "crates/simbad-resolver-caldwell",
    "crates/simbad-resolver-tap",
    "crates/simbad-resolver-sesame",
    "crates/simbad-resolver-cache",
    "crates/simbad-resolver-cache-memory",
    "crates/simbad-resolver-cache-sqlite",
    "crates/simbad-resolver",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/simbad-resolver"
authors = ["Sjors Robroek <s.robroek@vxsan.com>"]

[workspace.dependencies]
# Internal crates (path-linked; version bumps handled by release-please later).
simbad-resolver-core = { path = "crates/simbad-resolver-core", version = "0.1.0" }
simbad-resolver-caldwell = { path = "crates/simbad-resolver-caldwell", version = "0.1.0" }
simbad-resolver-tap = { path = "crates/simbad-resolver-tap", version = "0.1.0" }
simbad-resolver-sesame = { path = "crates/simbad-resolver-sesame", version = "0.1.0" }
simbad-resolver-cache = { path = "crates/simbad-resolver-cache", version = "0.1.0" }
simbad-resolver-cache-memory = { path = "crates/simbad-resolver-cache-memory", version = "0.1.0" }
simbad-resolver-cache-sqlite = { path = "crates/simbad-resolver-cache-sqlite", version = "0.1.0" }

# External — best crate per job (dependencies are unconstrained for this project).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
unicode-normalization = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
percent-encoding = "2"
csv = "1"
dashmap = "6"
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"

# Dev-only: offline HTTP mocking for the network resolver crates (-tap, -sesame).
wiremock = "0.6"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Domain terminology (SIMBAD, ICRS, ADQL, RA/Dec, UUIDv5, otype) is not
# backtick-suited; keep prose readable rather than fighting doc_markdown.
doc_markdown = "allow"

[workspace.lints.rust]
missing_docs = "warn"
