# simbad-resolver — single-crate SIMBAD astronomical target resolver.
#
# A generic library that resolves astronomical names, designations, and
# positions to canonical identities via SIMBAD, with a pluggable redb-backed
# cache/queue (see docs/adr/0002-single-crate.md).
[package]
name = "simbad-resolver"
version = "0.2.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/simbad-resolver"
authors = ["Sjors Robroek <s.robroek@vxsan.com>"]
description = "SIMBAD astronomical target resolver for Rust: resolve names, designations, and positions to canonical identities, with a pluggable redb-backed cache."
readme = "README.md"
keywords = ["astronomy", "simbad", "catalog", "astrometry", "resolver"]
categories = ["science", "api-bindings"]
# Ship only the crate itself — not the repo's agentic tooling / planning docs.
# Cargo.toml, Cargo.lock, LICENSE and README are picked up regardless; this
# whitelist keeps everything else (.specify/, .claude/, specs/, HANDOVER.md, …)
# out of the published package.
include = ["/src/**/*", "/tests/**/*", "/README.md", "/LICENSE"]

# Build the documentation on docs.rs with every feature enabled.
[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Exposes the in-memory `FakeResolver` test double to downstream tests/benches.
test-util = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
unicode-normalization = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
redb = "4"
# Shared planning-grade coordinate primitives (typed Equatorial position accessor).
skymath = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
wiremock = "0.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Domain terminology (SIMBAD, ICRS, ADQL, RA/Dec, UUIDv5, otype) is not
# backtick-suited; keep prose readable rather than fighting doc_markdown.
doc_markdown = "allow"

[lints.rust]
missing_docs = "warn"
