[package]
name = "simbad-resolver-cache-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Durable SQLite (sqlx) Cache and cache-backed Queue implementations for simbad-resolver."

[lints]
workspace = true

[dependencies]
simbad-resolver-core = { workspace = true }
simbad-resolver-cache = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["macros"] }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
