[package]
name = "simbad-resolver-caldwell"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Static Caldwell C1-C109 to NGC/IC designation map for simbad-resolver."

[lints]
workspace = true

[dependencies]
simbad-resolver-core = { workspace = true }

