[package]
name = "simbad-resolver-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure core types, normalization, identity, and the Resolver trait for simbad-resolver."

[lints]
workspace = true

[features]
# In-memory FakeResolver test double, exposed to other crates' tests/benches.
test-fixture = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
unicode-normalization = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
