[package]
name = "simbad-resolver-sesame"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SIMBAD Sesame resolver (broad-coverage name resolve) for simbad-resolver."

[lints]
workspace = true

[dependencies]
simbad-resolver-core = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
simbad-resolver-core = { workspace = true, features = ["test-fixture"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
